tests/ui/generics/generic-extern.stderr
error[E0044]: foreign items may not have type parameters
  --> $DIR/generic-extern.rs:2:5
   |
LL |     fn foo<T>();
   |     ^^^^^^^^^^^^ can't have type parameters
   |
   = help: replace the type parameters with concrete types like `u32`

error[E0133]: call to unsafe function `foo` is unsafe and requires unsafe function or block
  --> $DIR/generic-extern.rs:6:5
   |
LL |     foo::<i32>();
   |     ^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0044, E0133.
For more information about an error, try `rustc --explain E0044`.
